<resources>
    <string name="app_name">Fashon</string>
    <string name="title_activity_sign_up_acativity">SignUpAcativity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conferm_password">Confirm Password</string>
    <string name="Signup">Sign UP</string>
    <string name="Login">Login</string>
    <string name="EmailisNotValid">Email is Not Valid</string>
    <string name="PasswordisNotValid">Password is Not Valid</string>
    <string name="usernameNotValide">username Not Valide</string>
    <string name="passwordNotValide">password Not Valide</string>
</resources>